--- a/interface.html
+++ b/interface.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testing Website</title>
+    <title>Test</title>
 </head>
-<body><center>
-    <h1>
-        This is a test
-    </h1>
-</center>
+<body>
+    <center>
+        <h1>
+            This is a test commit
+        </h1>
+    </center>
 </body>
 </html>
